--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             border: 1px solid #ccc;
             padding: 10px;
             margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+        }
+        .city-info {
+            flex: 1;
         }
         .city-title {
             font-size: 1.5em;
@@ -37,6 +42,10 @@
             font-weight: bold;
             margin-bottom: 10px;
         }
+        .mini-chart {
+            width: 100px;
+            height: 100px;
+        }
     </style>
 </head>
 <body>
@@ -47,7 +56,7 @@
     <!-- Chart.js library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <!-- Add a canvas for the chart and a title for the chart city -->
+    <!-- Main chart area -->
     <div id="chart-container">
         <div id="chart-title">Mobility Solutions for City</div>
         <canvas id="mobilityChart"></canvas>
@@ -69,10 +78,13 @@
                 const cityDiv = document.createElement('div');
                 cityDiv.className = 'city-container';
 
-                // Create a title element with the flag and city name
+                const cityInfoDiv = document.createElement('div');
+                cityInfoDiv.className = 'city-info';
+
                 const cityTitle = document.createElement('div');
                 cityTitle.className = 'city-title';
 
+                // Add flag image if the country code is available
                 if (city.country_code) {
                     const flagImg = document.createElement('img');
                     flagImg.src = `https://flagpedia.net/data/flags/h80/${city.country_code.toLowerCase()}.png`;
@@ -83,15 +95,15 @@
                 }
 
                 cityTitle.appendChild(document.createTextNode(`${city.city}, ${city.country}`));
-                cityDiv.appendChild(cityTitle);
+                cityInfoDiv.appendChild(cityTitle);
 
                 const createdAt = document.createElement('div');
                 createdAt.textContent = `Data Created At: ${city.created_at || 'N/A'}`;
-                cityDiv.appendChild(createdAt);
+                cityInfoDiv.appendChild(createdAt);
 
                 const mobilitySolutionsTitle = document.createElement('div');
                 mobilitySolutionsTitle.textContent = 'Mobility Solutions:';
-                cityDiv.appendChild(mobilitySolutionsTitle);
+                cityInfoDiv.appendChild(mobilitySolutionsTitle);
 
                 const mobilitySolutions = document.createElement('ul');
                 for (const [solution, value] of Object.entries(city.mobility_solutions)) {
@@ -99,25 +111,38 @@
                     solutionItem.textContent = `${solution}: ${value}%`;
                     mobilitySolutions.appendChild(solutionItem);
                 }
-                cityDiv.appendChild(mobilitySolutions);
+                cityInfoDiv.appendChild(mobilitySolutions);
 
                 const trafficCongestion = document.createElement('div');
                 trafficCongestion.textContent = `Traffic Congestion Not a Problem: ${city.traffic_congestion_not_a_problem}%`;
-                cityDiv.appendChild(trafficCongestion);
+                cityInfoDiv.appendChild(trafficCongestion);
 
                 const publicTransport = document.createElement('div');
                 publicTransport.textContent = `Public Transport Satisfactory: ${city.public_transport_satisfactory}%`;
-                cityDiv.appendChild(publicTransport);
+                cityInfoDiv.appendChild(publicTransport);
 
                 const smartCityRanking = document.createElement('div');
                 smartCityRanking.textContent = `Smart City Ranking: ${city.smart_city_ranking}`;
-                cityDiv.appendChild(smartCityRanking);
+                cityInfoDiv.appendChild(smartCityRanking);
 
+                // Append city info to city container
+                cityDiv.appendChild(cityInfoDiv);
+
+                // Create a canvas for the mini chart
+                const miniChartCanvas = document.createElement('canvas');
+                miniChartCanvas.className = 'mini-chart';
+                miniChartCanvas.id = `miniChart-${i}`; // Unique ID for each chart
+                cityDiv.appendChild(miniChartCanvas);
+
+                // Append the city container to the main container
                 container.appendChild(cityDiv);
 
-                // Generate the chart for the first displayed city
+                // Create a mini pie chart for each city
+                createMiniChart(miniChartCanvas.id, city.mobility_solutions);
+                
+                // Generate the main chart for the first displayed city
                 if (i === displayedCities) {
-                    createMobilityChart(city.mobility_solutions, city.city);
+                    createMainChart(city.mobility_solutions, city.city);
                 }
             }
 
@@ -127,10 +152,36 @@
             }
         }
 
-        function createMobilityChart(mobilitySolutions, cityName) {
+        function createMiniChart(canvasId, mobilitySolutions) {
+            const ctx = document.getElementById(canvasId).getContext('2d');
+            new Chart(ctx, {
+                type: 'pie',
+                data: {
+                    labels: Object.keys(mobilitySolutions),
+                    datasets: [{
+                        data: Object.values(mobilitySolutions),
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 206, 86, 0.2)',
+                            'rgba(75, 192, 192, 0.2)',
+                            'rgba(153, 102, 255, 0.2)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: { display: false },
+                        tooltip: { enabled: false }
+                    }
+                }
+            });
+        }
+
+        function createMainChart(mobilitySolutions, cityName) {
             const ctx = document.getElementById('mobilityChart').getContext('2d');
-            
-            // Update chart title with the city name
             document.getElementById('chart-title').textContent = `Mobility Solutions Impact for ${cityName}`;
 
             new Chart(ctx, {
@@ -145,13 +196,6 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)'
-                        ],
-                        borderColor: [
-                            'rgba(255, 99, 132, 1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(255, 206, 86, 1)',
-                            'rgba(75, 192, 192, 1)',
-                            'rgba(153, 102, 255, 1)'
                         ],
                         borderWidth: 1
                     }]
