--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
             font-family: Arial, sans-serif;
             margin: 20px;
         }
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+            margin-bottom: 20px;
+        }
+        .navbar a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
         .city-container {
             border: 1px solid #ccc;
             padding: 10px;
@@ -43,12 +61,21 @@
             margin-bottom: 10px;
         }
         .mini-chart {
-            width: 30px;  /* Set mini chart width */
-            height: 30px; /* Set mini chart height */
+            width: 30px;
+            height: 30px;
         }
     </style>
 </head>
 <body>
+    <!-- Navbar -->
+    <div class="navbar">
+        <a href="#histograms">Istogrammi</a>
+        <a href="#comparison">Comparison</a>
+        <a href="#void1">Void</a>
+        <a href="#void2">Void</a>
+        <a href="#void3">Void</a>
+    </div>
+
     <h1>Smart City Mobility Solutions</h1>
     <div id="city-data-container"></div>
     <button id="load-more">Load More</button>
@@ -130,7 +157,7 @@
                 // Create a canvas for the mini chart
                 const miniChartCanvas = document.createElement('canvas');
                 miniChartCanvas.className = 'mini-chart';
-                miniChartCanvas.id = `miniChart-${i}`; // Unique ID for each chart
+                miniChartCanvas.id = `miniChart-${i}`;
                 cityDiv.appendChild(miniChartCanvas);
 
                 // Append the city container to the main container
@@ -227,3 +254,4 @@
     </script>
 </body>
 </html>
+
