--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     </style>
 </head>
 <body>
-    <!-- Navbar -->
+    <h1>Smart City Mobility Solutions</h1>
+
+    <!-- Navbar placed below the title -->
     <div class="navbar">
         <a href="#histograms">Istogrammi</a>
         <a href="#comparison">Comparison</a>
@@ -61,7 +63,6 @@
         <a href="#void3">Void</a>
     </div>
 
-    <h1>Smart City Mobility Solutions</h1>
     <div id="city-data-container"></div>
     <button id="load-more">Load More</button>
 
@@ -69,6 +70,7 @@
     <script src="cityData_full_with_country_codes.js"></script>
 
     <script>
+        // Your JavaScript code goes here (no chart functions if you removed them)
         let displayedCities = 0;
         const citiesPerPage = 5;
 
