--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 data: {
                     labels: [
                         'Car-sharing\nApps',
-                        'Parking Apps\nfor Spaces',
+                        'Parking Apps',
                         'Bicycle\nHiring',
                         'Online\nScheduling',
                         'Traffic Info\nApps'
