--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
         .city-container {
             border: 1px solid #ccc;
-            padding: 10px;
+            padding: 20px;
             margin-bottom: 20px;
             display: flex;
             align-items: flex-start;
@@ -37,10 +37,24 @@
         .city-info {
             flex: 1;
             padding-right: 20px;
+            text-align: center; /* Center-align text */
         }
         .city-title {
             font-size: 1.5em;
+            margin-bottom: 15px; /* Add spacing below title */
+        }
+        .city-info div {
+            margin-bottom: 12px; /* Add more space between sections */
+        }
+        .mobility-solution ul {
+            padding-left: 0;
+            list-style: none;
+            margin-top: 10px;
             margin-bottom: 10px;
+        }
+        .mobility-solution li {
+            margin-bottom: 8px;
+            text-align: center; /* Center-align each list item */
         }
         .chart-container {
             width: 600px;
