--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         .city-info {
             flex: 1;
             padding-right: 20px;
-            text-align: center; /* Center-align text */
+            text-align: left; /* Align text to the left */
         }
         .city-title {
             font-size: 1.5em;
-            margin-bottom: 15px; /* Add spacing below title */
+            margin-bottom: 15px;
         }
         .city-info div {
-            margin-bottom: 12px; /* Add more space between sections */
+            margin-bottom: 12px; /* Add space between sections */
         }
         .mobility-solution ul {
             padding-left: 0;
@@ -54,15 +54,16 @@
         }
         .mobility-solution li {
             margin-bottom: 8px;
-            text-align: center; /* Center-align each list item */
+            text-align: left; /* Left-align each list item */
         }
         .chart-container {
-            width: 600px;
-            height: 400px;
+            width: 400px;
+            height: 300px;
         }
     </style>
 </head>
 <body>
+    <!-- Navbar and rest of the HTML -->
     <h1>Smart City Mobility Solutions</h1>
 
     <div class="navbar">
