--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
             font-family: Arial, sans-serif;
             margin: 20px;
         }
+        /* Container for the title and navbar to stay fixed */
+        .header-container {
+            position: sticky;
+            top: 0;
+            background-color: white;
+            z-index: 1000;
+            padding-bottom: 10px;
+        }
+        h1 {
+            margin: 0;
+            padding: 10px 0;
+            text-align: center;
+            border-bottom: 1px solid #ccc;
+        }
         .navbar {
             background-color: #333;
             overflow: hidden;
-            margin-bottom: 20px;
+            padding: 0;
         }
         .navbar a {
             float: left;
@@ -30,21 +44,21 @@
         .city-container {
             border: 1px solid #ccc;
             padding: 20px;
-            margin-bottom: 20px;
+            margin-top: 20px; /* Space between fixed header and content */
             display: flex;
             align-items: flex-start;
         }
         .city-info {
             flex: 1;
             padding-right: 20px;
-            text-align: left; /* Align text to the left */
+            text-align: left;
         }
         .city-title {
             font-size: 1.5em;
             margin-bottom: 15px;
         }
         .city-info div {
-            margin-bottom: 12px; /* Add space between sections */
+            margin-bottom: 12px;
         }
         .mobility-solution ul {
             padding-left: 0;
@@ -54,7 +68,7 @@
         }
         .mobility-solution li {
             margin-bottom: 8px;
-            text-align: left; /* Left-align each list item */
+            text-align: left;
         }
         .chart-container {
             width: 400px;
@@ -63,15 +77,16 @@
     </style>
 </head>
 <body>
-    <h1>Smart City Mobility Solutions</h1>
-
-    <!-- Navbar with link to main city data view -->
-    <div class="navbar">
-        <a href="#" onclick="scrollToTop()">Istogrammi</a>
-        <a href="#comparison">Comparison</a>
-        <a href="#void1">Void</a>
-        <a href="#void2">Void</a>
-        <a href="#void3">Void</a>
+    <!-- Header container for the title and navbar to be pinned at the top -->
+    <div class="header-container">
+        <h1>Smart City Mobility Solutions</h1>
+        <div class="navbar">
+            <a href="#" onclick="scrollToTop()">Istogrammi</a>
+            <a href="#comparison">Comparison</a>
+            <a href="#void1">Void</a>
+            <a href="#void2">Void</a>
+            <a href="#void3">Void</a>
+        </div>
     </div>
 
     <div id="city-data-container"></div>
