--- a/index.html
+++ b/index.html
@@ -9,24 +9,13 @@
             font-family: Arial, sans-serif;
             margin: 20px;
         }
-        /* Container for the title and navbar to stay fixed */
-        .header-container {
-            position: sticky;
-            top: 0;
-            background-color: white;
-            z-index: 1000;
-            padding-bottom: 10px;
-        }
-        h1 {
-            margin: 0;
-            padding: 10px 0;
-            text-align: center;
-            border-bottom: 1px solid #ccc;
-        }
         .navbar {
             background-color: #333;
             overflow: hidden;
-            padding: 0;
+            margin-bottom: 20px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
         .navbar a {
             float: left;
@@ -44,7 +33,7 @@
         .city-container {
             border: 1px solid #ccc;
             padding: 20px;
-            margin-top: 20px; /* Space between fixed header and content */
+            margin-bottom: 20px;
             display: flex;
             align-items: flex-start;
         }
@@ -77,16 +66,14 @@
     </style>
 </head>
 <body>
-    <!-- Header container for the title and navbar to be pinned at the top -->
-    <div class="header-container">
-        <h1>Smart City Mobility Solutions</h1>
-        <div class="navbar">
-            <a href="#" onclick="scrollToTop()">Istogrammi</a>
-            <a href="#comparison">Comparison</a>
-            <a href="#void1">Void</a>
-            <a href="#void2">Void</a>
-            <a href="#void3">Void</a>
-        </div>
+    <h1>Smart City Mobility Solutions</h1>
+
+    <div class="navbar">
+        <a href="index.html">Istogrammi</a> <!-- Main page link -->
+        <a href="comparison.html">Comparison</a> <!-- Link to the new Comparison page -->
+        <a href="#void1">Void</a>
+        <a href="#void2">Void</a>
+        <a href="#void3">Void</a>
     </div>
 
     <div id="city-data-container"></div>
@@ -231,10 +218,6 @@
                     }
                 }
             });
-        }
-
-        function scrollToTop() {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
         }
 
         document.getElementById('load-more').addEventListener('click', displayCityData);
