--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             background-color: #ddd;
             color: black;
         }
+        .active-tab {
+            background-color: #ddd;
+            color: black;
+        }
+        .tab-content {
+            display: none;
+        }
         .city-container {
             border: 1px solid #ccc;
             padding: 20px;
@@ -69,20 +76,48 @@
     <h1>Smart City Mobility Solutions</h1>
 
     <div class="navbar">
-        <a href="index.html">Istogrammi</a> <!-- Main page link -->
-        <a href="comparison.html">Comparison</a> <!-- Link to the new Comparison page -->
-        <a href="#void1">Void</a>
-        <a href="#void2">Void</a>
-        <a href="#void3">Void</a>
+        <a href="#histograms" class="tab-link active-tab" onclick="openTab(event, 'histogram')">Istogrammi</a>
+        <a href="#comparison" class="tab-link" onclick="openTab(event, 'comparison')">Comparison</a>
+        <a href="#void1" class="tab-link">Void</a>
+        <a href="#void2" class="tab-link">Void</a>
+        <a href="#void3" class="tab-link">Void</a>
     </div>
 
-    <div id="city-data-container"></div>
-    <button id="load-more">Load More</button>
+    <!-- Histogram Tab Content -->
+    <div id="histogram" class="tab-content" style="display: block;">
+        <div id="city-data-container"></div>
+        <button id="load-more">Load More</button>
+    </div>
+
+    <!-- Comparison Tab Content -->
+    <div id="comparison" class="tab-content">
+        <p>This is the Comparison tab content. You can add specific comparison content here.</p>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="cityData_full_with_country_codes.js"></script>
 
     <script>
+        // Tab functionality
+        function openTab(event, tabName) {
+            // Hide all tab contents
+            const tabContents = document.getElementsByClassName("tab-content");
+            for (let i = 0; i < tabContents.length; i++) {
+                tabContents[i].style.display = "none";
+            }
+
+            // Remove active class from all tabs
+            const tabLinks = document.getElementsByClassName("tab-link");
+            for (let i = 0; i < tabLinks.length; i++) {
+                tabLinks[i].classList.remove("active-tab");
+            }
+
+            // Show the selected tab content and set the active tab
+            document.getElementById(tabName).style.display = "block";
+            event.currentTarget.classList.add("active-tab");
+        }
+
+        // City Data Display for Histogram Tab
         let displayedCities = 0;
         const citiesPerPage = 5;
 
@@ -225,4 +260,4 @@
         displayCityData();
     </script>
 </body>
-</html>
+</
